layout issues with document

--- a/stylus/styles.styl
+++ b/stylus/styles.styl
@@ -34,6 +34,7 @@ nav
 	.document
 		display table
 		vertical-align top
+		max-width 800px
 		table
 			border-radius 2px
 			border 1px solid rgb(216, 216, 216)
@@ -67,7 +68,7 @@ nav
 			.commands
 				margin-top 0.5em
 		.show-form
-			margin 0 0.5em
+			margin 0 0.5em 0.5em 0.5em
 		tr.line
 			.add-comment
 				display none
@@ -96,6 +97,7 @@ nav
 					border-top none
 					border-bottom none
 					font-size 12px
+					max-height 20px
 					text-align right
 					padding-right 0.5em
 					padding-left 1em
